Temporary fix for mobile view on homepage.

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <header class="header">
       <a href="" class="logo"><img src="images/logo-triangle-long-v2.png"></a>
       <input class="menu-btn" type="checkbox" id="menu-btn" />
-      <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-      <!--ul class="menu">
+      <!--label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+      <ul class="menu">
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul-->
@@ -50,14 +50,13 @@
     <div class="row">
       <div class="one-half column">
         <h3>
-          <span class="green">Triangle Ventures</span> apply traditional strategies with the principles of harmony,
-          balance, and Feng Shui. #UpOnly
+          <span class="green">Triangle Ventures</span> invests in the growth of various leading, innovative blockchain projects globally.
         </h3>
       </div>
     </div>
 
     <div class="footer">
-      <p class="green">hello@triangle.ventures | &#64;TriangleVentures </p>
+      <p class="green"><a href="mailto:hello@triangle.ventures" target="_blank"/>hello@triangle.ventures</a> | <a href="https://twitter.com/TriangleV" target="_blank">&#64;TriangleV</a> </p>
     </div>
 
   </div>
